--- a/package.json
+++ b/package.json
@@ -8,9 +8,21 @@
     "dev:client": "npm run dev --prefix client",
     "dev:server": "npm run dev --prefix server"
   },
-  "devDependencies": {
+  "dependencies": {
+    "@vercel/blob": "^2.0.0",
     "@vercel/node": "^5.5.15",
-    "concurrently": "^8.2.2"
+    "cors": "^2.8.5",
+    "exceljs": "^4.4.0",
+    "express": "^4.18.2",
+    "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.5",
+    "@types/uuid": "^9.0.7",
+    "concurrently": "^8.2.2",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
