--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,13 @@
   "version": 2,
   "buildCommand": "cd client && npm install && npm run build",
   "outputDirectory": "client/dist",
-  "installCommand": "npm run install:all",
+  "installCommand": "npm install && npm run install:all",
   "framework": null,
+  "functions": {
+    "api/applications.ts": {
+      "runtime": "@vercel/node"
+    }
+  },
   "rewrites": [
     {
       "source": "/api/(.*)",
