--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,11 +1,15 @@
 {
-  "extends": "../server/tsconfig.json",
   "compilerOptions": {
+    "target": "ES2020",
     "module": "ESNext",
+    "lib": ["ES2020"],
     "moduleResolution": "node",
+    "strict": true,
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true
   },
-  "include": ["*.ts"]
+  "include": ["**/*.ts"]
 }
 
