--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "cors": "^2.8.5",
     "exceljs": "^4.4.0",
     "express": "^4.18.2",
+    "multer": "^2.0.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.10.5",
     "@types/uuid": "^9.0.7",
     "concurrently": "^8.2.2",
