Fix 3Vqercel deployment - comprehensive error handling

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,16 @@
 {
   "buildCommand": "cd client && npm install && npm run build",
   "outputDirectory": "client/dist",
-  "installCommand": "npm install && npm run install:all",
+  "installCommand": "npm install --production=false && npm run install:all",
   "rewrites": [
     {
       "source": "/(.*)",
       "destination": "/index.html"
     }
-  ]
+  ],
+  "functions": {
+    "api/**/*.ts": {
+      "runtime": "nodejs20.x"
+    }
+  }
 }
